Bug #43528: Align header icons + adjust gallery tile styling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@77718 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/document.styl
+++ b/management/univention-web/css/document.styl
@@ -112,5 +112,7 @@ for i in (1..5)
 	.dijitButton
 		box-shadow: none
 
+.umcStandby
+	background: no-repeat center url('images/standbyAnimation.svg')
 
 
