--- a/management/univention-web/css/site/appGallery.styl
+++ b/management/univention-web/css/site/appGallery.styl
@@ -26,6 +26,7 @@
 		height: 165px
 		padding: 0
 		margin: 12px 40px 12px 0
+		line-height: 1.25
 
 		&:last-child
 			margin-right: 0
@@ -109,7 +110,7 @@
 				width: 100%
 				height: 100%
 				position: absolute
-				padding-top: 25px
+				padding-top: 22px
 				bottom: -70px
 				transition: bottom 0.4s
 				z-index: 1
@@ -137,7 +138,7 @@
 				.appHover
 					width: 100%
 					height: 70px
-					padding: 0.3em 1.1em 0.3em 1em
+					padding: 8px
 					color: #fff
 					font-size: $font-size-caption
 
